--- a/webactual/css/style.css
+++ b/webactual/css/style.css
@@ -239,7 +239,7 @@ a:hover {
 .carousel-inner .form-inline .form-group button[type="livedemo"]{
 	padding:20px 60px;
 	font-size:20px;
-	background:#65AAF0;
+
 	color:#fff;
 	border-radius:0;
 	border-color:#fff;
@@ -1125,4 +1125,30 @@ ul.social-network li a {
     width:60%;
     text-align:center;
     margin:inherit;
+}
+#m1{
+	display: none;
+}
+#more{
+	display: none;
+}
+#btns{
+	text-decoration:none;
+	transition: all 0.1s ease-in-out;
+	-moz-transition: all 0.1s ease-in-out;
+	-webkit-transition: all 0.1s ease-in-out;
+	-o-transition: all 0.1s ease-in-out;
+	outline: none;
+color:#272727;
+}
+#o{
+	background: #4b4949;
+	margin: 50px;
+	color: black;
+	position:relative;
+    width:30%;
+    text-align:center;
+    margin:inherit;
+		margin-right: -70%;
+
 }
