--- a/webactual/css/style.css
+++ b/webactual/css/style.css
@@ -37,7 +37,7 @@ a {
 }
 a:hover {
 	text-decoration: none;
-	color:#aaa;
+	color:#aaa;	
 	}
 
 .btn {
@@ -52,9 +52,9 @@ a:hover {
 .btn:hover {
 	background-color: #fff;
 	border-color:#f2f2f2;
-	color:#272727;
+	color:#272727;	
 }
-
+	
 /*===========================
   Menu and Navigation
 ============================ */
@@ -69,9 +69,9 @@ a:hover {
 .navbar-brand h1 {
 	margin-top:9px;
 	padding-top:5px;
-	float: left;
-	font-size: 25px;
-	color:#fff;
+	float: left;	
+	font-size: 25px;	
+	color:#fff;	
 	text-transform:uppercase;
 	font-weight:600;
 }
@@ -86,7 +86,7 @@ a:hover {
 	font-size:12px;
 	float:right;
 	text-transform:uppercase;
-	font-weight:600;
+	font-weight:600;	
 }
 
 .navbar-collapse {
@@ -103,7 +103,7 @@ a:hover {
 }
 
 .menu ul.nav-tabs li {
-	color:#fff;
+	color:#fff;	
 }
 
 .nav-tabs {
@@ -114,7 +114,7 @@ a:hover {
 	margin-bottom: 0;
 }
 
-.nav-tabs > li > a {
+.nav-tabs > li > a {	
 	border-radius:0;
 	color:#fff;
 	padding:30px;
@@ -122,8 +122,8 @@ a:hover {
 
 .nav-tabs > li > a:hover {
 	color:#272727;
-	background:#fff;
-}
+	background:#fff;	
+} 
 
 .nav-tabs > li a.active {
 	color: #555;
@@ -142,7 +142,7 @@ a:hover {
   slider
 ============================ */
 .slider {
-	position: relative;
+	position: relative;	
 	margin-top:-20px;
 }
 
@@ -181,7 +181,7 @@ a:hover {
 	border: 1px solid #65AAF0;
 }
 
-#carousel-slider
+#carousel-slider 
 .carousel-control {
 	width:inherit;
 }
@@ -239,7 +239,7 @@ a:hover {
 .carousel-inner .form-inline .form-group button[type="livedemo"]{
 	padding:20px 60px;
 	font-size:20px;
-
+	background:#65AAF0;
 	color:#fff;
 	border-radius:0;
 	border-color:#fff;
@@ -276,7 +276,7 @@ a:hover {
 }
 
 .form-inline {
-	margin-top:50px;
+	margin-top:50px;	
 }
 
 
@@ -299,7 +299,7 @@ a:hover {
 	margin-top:20px;
 	margin-bottom:80px;
 	color:#aaa;
-}
+} 
 
 .btn-gamp a {
   float: right;
@@ -385,9 +385,9 @@ a:hover {
    color: #FFFFFF;
 }
 
-.joomla-skill,
-.html-skill,
-.css-skill,
+.joomla-skill, 
+.html-skill, 
+.css-skill, 
 .wp-skill {
   position: absolute;
   height: 100%;
@@ -406,7 +406,7 @@ a:hover {
   background: -o-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 28%,rgba(45,125,164,1) 28%); /* Opera 11.10+ */
   background: -ms-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 28%,rgba(45,125,164,1) 28%); /* IE10+ */
   background: linear-gradient(to bottom, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 28%,rgba(45,125,164,1) 28%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#2d7da4',GradientType=0 ); /* IE6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#2d7da4',GradientType=0 ); /* IE6-9 */    
 }
 
 .html-skill {
@@ -468,13 +468,13 @@ a:hover {
   font-weight: 300;
 }
 
-.single-profile-top,
+.single-profile-top, 
 .single-profile-bottom {
   font-weight: 400;
   line-height: 24px;
 }
 
-.single-profile-top,
+.single-profile-top, 
 .single-profile-bottom  {
   border: 1px solid #ddd;
   padding: 15px;
@@ -523,12 +523,12 @@ ul.social_icons li  a i{
   opacity:.8;
 }
 
-.team .social_icons .fa-facebook:hover,
-.team .social_icons .fa-twitter:hover,
+.team .social_icons .fa-facebook:hover, 
+.team .social_icons .fa-twitter:hover, 
 .team .social_icons .fa-google-plus:hover {
   transform: rotate(360deg);
   -ms-transform:rotate(360deg);
-  -webkit-transform:rotate(360deg);
+  -webkit-transform:rotate(360deg); 
   transition-duration:2s;
   transition-property: all;
   transition-timing-function: ease;
@@ -650,7 +650,7 @@ ul.social_icons li  a i{
   margin-left: -32px;
 }
 
-.team .single-profile-top:before,
+.team .single-profile-top:before, 
 .team .single-profile-top:after {
   content: "";
   position: absolute;
@@ -749,7 +749,7 @@ ul.social_icons li  a i{
 }
 
 .gallery figure {
-	position: relative;
+	position: relative;	
 	margin-top:30px;
 	margin-bottom:30px;
 	background: #272727;
@@ -908,11 +908,11 @@ figure.effect-marley:hover p {
 	margin-bottom:30px;
 }
 
-.contact-page p {
+.contact-page p {	
 	margin-bottom:30px;
 }
 
-.contact-page .contact-form
+.contact-page .contact-form 
 .form-group label {
   color: #4E4E4E;
   font-size: 16px;
@@ -1016,7 +1016,7 @@ footer .btn-gamp input {
 	font-size: 12px;
 	text-transform: uppercase;
 	letter-spacing: 3px;
-	color: #272727;
+	color: #272727;	
 	width: 180px;
 	height: 60px;
 	text-align: center;
@@ -1047,7 +1047,7 @@ ul.sidebar-gallery {
   list-style: none;
   padding: 0;
   margin: 0;
-
+ 
 }
 
 .sidebar-gallery li {
@@ -1062,7 +1062,7 @@ ul.sidebar-gallery {
 
 ul.social-network {
 	list-style:none;
-	margin-top:20px;
+	margin-top:20px;	
 	padding:10px;
 	transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -1076,13 +1076,13 @@ ul.social-network {
 
 ul.social-network li {
 	display:inline;
-	margin: 0 50px;
-	font-size:25px;
+	margin: 0 50px;	
+	font-size:25px;	
 	margin-left:-10px;
 }
 
 ul.social-network li a {
-	color:#d0d0d0;
+	color:#d0d0d0;	
 }
 .social-network li:hover .fa-twitter {
   color: #00abf0;
@@ -1094,19 +1094,19 @@ ul.social-network li a {
   color: #eb8984;
 }
 .social-network li:hover .fa-pinterest {
-  color: #c9171e;
+  color: #c9171e; 
 }
 .social-network li:hover .fa-linkedin {
-  color: #0077b5;
+  color: #0077b5; 
 }
 .social-network li:hover .fa-youtube-play {
-  color: #C84941;
+  color: #C84941; 
 }
 .social-network li:hover .fa-dribbble {
-  color: #EA4C89 ;
+  color: #EA4C89 ; 
 }
 .social-network li:hover .fa-pinterest-square {
-  color: #EA4B49;
+  color: #EA4B49; 
 }
 
 .copyright {
@@ -1119,36 +1119,4 @@ ul.social-network li a {
 	font-weight:600;
 	font-size:12px;
 	text-shadow:none;
-}
-#btncenter{
-	position:relative;
-    width:60%;
-    text-align:center;
-    margin:inherit;
-}
-#m1{
-	display: none;
-}
-#more{
-	display: none;
-}
-#btns{
-	text-decoration:none;
-	transition: all 0.1s ease-in-out;
-	-moz-transition: all 0.1s ease-in-out;
-	-webkit-transition: all 0.1s ease-in-out;
-	-o-transition: all 0.1s ease-in-out;
-	outline: none;
-color:#272727;
-}
-#o{
-	background: #4b4949;
-	margin: 50px;
-	color: black;
-	position:relative;
-    width:30%;
-    text-align:center;
-    margin:inherit;
-		margin-right: -70%;
-
-}
+} 
