--- a/webactual/css/style.css
+++ b/webactual/css/style.css
@@ -1132,3 +1132,11 @@ ul.social-network li a {
 #icon1{
 	    width: 96px
 }
+#top{
+	position: absolute;
+    bottom: 12%;
+}
+#top2{
+	position:relative;
+	bottom: 1%;
+}
